--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@types/node": "^22.10.7",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "socket.io": "^4.8.1"
   }
 }
