--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,8 @@
     "eventemitter3": "^5.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-draggable": "^4.4.6",
+    "react-modal": "^3.16.3",
     "react-router-dom": "^7.1.3",
     "socket.io-client": "^4.8.1"
   },
@@ -21,6 +23,7 @@
     "@eslint/js": "^9.17.0",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
+    "@types/react-modal": "^3.16.3",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.17.0",
     "eslint-plugin-react-hooks": "^5.0.0",
