--- a/server/package.json
+++ b/server/package.json
@@ -3,9 +3,7 @@
   "version": "1.0.0",
   "main": "index.ts",
   "scripts": {
-    "dev": "vite-node src/index.ts",
-    "build": "vite build",
-    "start": "node dist/index.js"
+    "start": "vite-node src/index.ts"
   },
   "keywords": [],
   "author": "",
