--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "react-draggable": "^4.4.6",
     "react-modal": "^3.16.3",
     "react-router-dom": "^7.1.3",
+    "serve": "^14.2.4",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
