--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.ts",
   "scripts": {
-    "start": "vite-node src/index.ts"
+    "dev": "cross-env PORT=4000 ORIGIN=http://localhost:5173 vite-node src/index.ts",
+    "start": "cross-env PORT=4000 ORIGIN=http://localhost:3000 vite-node src/index.ts"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +19,7 @@
   },
   "dependencies": {
     "@types/node": "^22.10.7",
+    "cross-env": "^7.0.3",
     "express": "^4.21.2",
     "pg": "^8.14.1",
     "socket.io": "^4.8.1"
