--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - db
     environment:
       PORT: 4001
-      ORIGIN: "http://217.198.13.150:3000"
+      ORIGIN: "http://catan-online.ru"
       DATABASE_USER: my_user
       DATABASE_PASSWORD: "34"
       DATABASE_NAME: my_database
@@ -22,10 +22,10 @@ services:
     build:
       context: ./client
       args:
-        - VITE_SERVER_URL=http://217.198.13.150:4001
+        - VITE_SERVER_URL=http://catan-online.ru:4001
     restart: always
     ports:
-      - "3000:3000"
+      - "80:3000"
     depends_on:
       - server
 
